fix: refine the bugs

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
+pluginManagement {
+    repositories { google(); mavenCentral(); gradlePluginPortal() }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories { google(); mavenCentral() }   // ← no jcenter()
+}
 rootProject.name = "AIDemo"
-include ':app'
+include(":app")
