--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,18 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    namespace 'com.android.aidemo'
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.android.aidemo"
-        minSdkVersion 28
-        targetSdkVersion 30
+        minSdk 28
+        targetSdk 35
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -23,21 +22,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        viewBinding true
-    }
+    kotlinOptions { jvmTarget = '17' }
+    buildFeatures { viewBinding true }
 }
 
 dependencies {
+    // remove the old "kotlin-stdlib:$kotlin_version" line
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
@@ -47,25 +43,22 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.exifinterface:exifinterface:1.3.0-rc01'
+    // exifinterface: use a stable (not rc) version if you can
+    implementation 'androidx.exifinterface:exifinterface:1.4.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'de.hdodenhof:circleimageview:3.0.1'
 
-    // CameraX
+    // CameraX (your old versions are fine to start)
     implementation "androidx.camera:camera-camera2:1.0.0"
     implementation "androidx.camera:camera-lifecycle:1.0.0"
     implementation "androidx.camera:camera-view:1.0.0-alpha24"
 
-    // fab
     implementation "com.leinardi.android:speed-dial:3.2.0"
-
-    // pytorch
     implementation 'org.pytorch:pytorch_android_lite:1.9.0'
     implementation 'org.pytorch:pytorch_android_torchvision:1.9.0'
-
-    // permission
-    implementation 'com.permissionx.guolindev:permissionx:1.4.0'
+    implementation "com.guolindev.permissionx:permissionx:1.8.1"
 }
