--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript {
-    ext.kotlin_version = "1.5.0"
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+    id 'com.android.application' version '8.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.21' apply false
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+// Optional: modern clean task
+tasks.register("clean", Delete) {
+    delete(rootProject.buildDir)
 }
